--- a/Penwatch_Yolo_Success.ipynb
+++ b/Penwatch_Yolo_Success.ipynb
@@ -3,6 +3,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/chugmn/NYP-PUBLIC/blob/main/Yolo8_custom_train_penwatcver2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+{
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "p9fM_zdIhpGt"
       },
       "source": [
