--- a/Penwatch_Yolo_Success.ipynb
+++ b/Penwatch_Yolo_Success.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/chugmn/NYP-PUBLIC/blob/main/Yolo8_custom_train_penwatcver2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github.com/chugmn/NYP107Assign/edit/main/Penwatch_Yolo_Success.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
 {
