--- a/penwatch_yolo_success.ipynb
+++ b/penwatch_yolo_success.ipynb
@@ -2375,11 +2375,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "j_CI0ZBTteA2"
+        "id": "j_CI0ZBTteA2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "98b545ec-3484-4696-fb27-150e43d71e40"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  adding: best_int8_openvino_model/ (stored 0%)\n",
+            "  adding: best_int8_openvino_model/best.xml (deflated 95%)\n",
+            "  adding: best_int8_openvino_model/best.bin (deflated 18%)\n",
+            "  adding: best_int8_openvino_model/metadata.yaml (deflated 31%)\n"
+          ]
+        }
+      ],
       "source": [
         "%%bash\n",
         "mv ./pensandwatches/train/weights/best_int8_openvino_model/ .\n",
