--- a/penwatch_yolo_success.ipynb
+++ b/penwatch_yolo_success.ipynb
@@ -2539,8 +2539,8 @@
       "source": [
         "import gradio as gr\n",
         "from ultralytics import YOLO\n",
-        "import os\n",
         "import cv2\n",
+        "import os\n",
         "from PIL import Image\n",
         "import tempfile\n",
         "import threading\n",
@@ -2549,97 +2549,116 @@
         "STUDENT_ID = \"1204756F\"\n",
         "STUDENT_NAME = \"Mohandas Vishindas Chugani\"\n",
         "\n",
-        "# Load your YOLO model (update with your actual model path)\n",
+        "# Load YOLO model (update with your actual model path)\n",
         "MODEL_PATH = \"best_int8_openvino_model\"\n",
         "detection_model = YOLO(MODEL_PATH, task=\"detect\")\n",
         "\n",
-        "# Global variable to stop video processing\n",
+        "# Global variable to manage video processing state\n",
         "stop_video_processing = threading.Event()\n",
         "\n",
-        "# Function to predict objects in an image\n",
         "def predict_image(pil_img):\n",
+        "    \"\"\"Predict objects in an image.\"\"\"\n",
         "    results = detection_model.predict(pil_img, conf=0.5, iou=0.5)\n",
         "    annotated_image = results[0].plot()\n",
         "    return Image.fromarray(annotated_image[..., ::-1])\n",
         "\n",
-        "# Function to process and predict objects in a video\n",
         "def predict_video(video):\n",
+        "    \"\"\"Process and predict objects in a video.\"\"\"\n",
         "    global stop_video_processing\n",
         "    stop_video_processing.clear()\n",
         "\n",
         "    cap = cv2.VideoCapture(video)\n",
-        "    temp_dir = tempfile.mkdtemp()\n",
+        "    temp_video_path = os.path.join(tempfile.mkdtemp(), \"output.mp4\")\n",
         "\n",
-        "    frames = []\n",
+        "    fourcc = cv2.VideoWriter_fourcc(*\"mp4v\")\n",
+        "    fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
+        "    width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+        "    height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+        "    out = cv2.VideoWriter(temp_video_path, fourcc, fps, (width, height))\n",
+        "\n",
         "    while cap.isOpened():\n",
         "        if stop_video_processing.is_set():\n",
-        "            break\n",
+        "            break  # Stop processing if the user interrupts\n",
         "\n",
         "        ret, frame = cap.read()\n",
         "        if not ret:\n",
         "            break\n",
         "\n",
-        "        # Perform detection on each frame\n",
         "        results = detection_model.predict(frame, conf=0.5, iou=0.5)\n",
         "        annotated_frame = results[0].plot()\n",
-        "        frames.append(annotated_frame)\n",
+        "        out.write(annotated_frame)\n",
         "\n",
         "    cap.release()\n",
+        "    out.release()\n",
         "\n",
-        "    # Return frames as output\n",
-        "    return frames\n",
+        "    return temp_video_path if stop_video_processing.is_set() else temp_video_path\n",
         "\n",
-        "# Create the Gradio app interface\n",
         "def create_interface():\n",
+        "    \"\"\"Create the Gradio app interface.\"\"\"\n",
         "    global stop_video_processing\n",
         "\n",
         "    with gr.Blocks() as interface:\n",
-        "        # Title and creator details\n",
         "        gr.Markdown(\n",
         "            f\"<h1 style='text-align: center;'>Pen and Watch Detection</h1>\"\n",
         "            f\"<p style='text-align: center;'>Created by: <strong>{STUDENT_NAME}</strong> (ID: <strong>{STUDENT_ID}</strong>)</p>\"\n",
         "        )\n",
         "\n",
         "        with gr.Row():\n",
-        "            with gr.Column(scale=1):  # Input section (left)\n",
+        "            with gr.Column():\n",
         "                gr.Markdown(\"### Input\")\n",
         "                input_type = gr.Radio(choices=[\"Image\", \"Video\"], value=\"Image\", label=\"Select Input Type\")\n",
         "                input_image = gr.Image(type=\"pil\", label=\"Upload Image\", visible=True)\n",
         "                input_video = gr.Video(label=\"Upload Video\", visible=False)\n",
         "\n",
-        "                def toggle_inputs(input_choice):\n",
-        "                    if input_choice == \"Image\":\n",
-        "                        return gr.update(visible=True), gr.update(visible=False)\n",
-        "                    else:\n",
-        "                        return gr.update(visible=False), gr.update(visible=True)\n",
+        "                def toggle_inputs(choice):\n",
+        "                    return (gr.update(visible=choice == \"Image\"), gr.update(visible=choice == \"Video\"))\n",
         "\n",
-        "                input_type.change(toggle_inputs, inputs=input_type, outputs=[input_image, input_video])\n",
+        "                input_type.change(toggle_inputs, inputs=[input_type], outputs=[input_image, input_video])\n",
         "\n",
         "                detect_btn = gr.Button(\"Detect\", variant=\"primary\")\n",
+        "                reset_btn = gr.Button(\"Reset\", variant=\"secondary\")\n",
         "\n",
-        "            with gr.Column(scale=1):  # Output section (right)\n",
+        "            with gr.Column():\n",
         "                gr.Markdown(\"### Output\")\n",
         "                output_image = gr.Image(type=\"pil\", label=\"Detection Result (Image)\", visible=True)\n",
-        "                output_video_frames = gr.Gallery(label=\"Detection Result (Video Frames)\", visible=False)\n",
+        "                output_video = gr.Video(label=\"Detection Result (Processed Video)\", visible=False)\n",
+        "                stop_btn = gr.Button(\"Stop Video Processing\", visible=False)\n",
         "\n",
-        "                def toggle_outputs(input_choice):\n",
-        "                    if input_choice == \"Image\":\n",
-        "                        return gr.update(visible=True), gr.update(visible=False)\n",
-        "                    else:\n",
-        "                        return gr.update(visible=False), gr.update(visible=True)\n",
+        "                def toggle_outputs(choice):\n",
+        "                    return (\n",
+        "                        gr.update(visible=choice == \"Image\"),\n",
+        "                        gr.update(visible=choice == \"Video\"),\n",
+        "                        gr.update(visible=choice == \"Video\")\n",
+        "                    )\n",
         "\n",
-        "                input_type.change(toggle_outputs, inputs=input_type, outputs=[output_image, output_video_frames])\n",
+        "                input_type.change(toggle_outputs, inputs=[input_type], outputs=[output_image, output_video, stop_btn])\n",
         "\n",
-        "        def detect(input_choice, image=None, video=None):\n",
-        "            if input_choice == \"Image\" and image is not None:\n",
-        "                return predict_image(image), None\n",
-        "            elif input_choice == \"Video\" and video is not None:\n",
-        "                return None, predict_video(video)\n",
-        "            return None, None\n",
+        "        def detect(choice, image=None, video=None):\n",
+        "            if choice == \"Image\" and image:\n",
+        "                stop_video_processing.set()  # Ensure video processing is stopped\n",
+        "                return predict_image(image), None, gr.update(visible=False)\n",
+        "            elif choice == \"Video\" and video:\n",
+        "                stop_video_processing.clear()\n",
+        "                video_path = predict_video(video)\n",
+        "                return None, video_path, gr.update(visible=True, interactive=True)\n",
+        "            return None, None, gr.update(visible=False)\n",
         "\n",
-        "        detect_btn.click(detect, inputs=[input_type, input_image, input_video], outputs=[output_image, output_video_frames])\n",
+        "        def reset():\n",
+        "            stop_video_processing.set()  # Stop any ongoing video processing\n",
+        "            return None, None, None, None, gr.update(visible=False)\n",
         "\n",
-        "        # Footer with developer information\n",
+        "        def stop_processing():\n",
+        "            stop_video_processing.set()\n",
+        "            return gr.update(visible=False, interactive=False)\n",
+        "\n",
+        "        detect_btn.click(\n",
+        "            detect,\n",
+        "            inputs=[input_type, input_image, input_video],\n",
+        "            outputs=[output_image, output_video, stop_btn]\n",
+        "        )\n",
+        "        reset_btn.click(reset, outputs=[input_image, input_video, output_image, output_video, stop_btn])\n",
+        "        stop_btn.click(stop_processing, outputs=[stop_btn])\n",
+        "\n",
         "        gr.Markdown(\n",
         "            \"<p style='text-align: center;color: gray;'>Developed by: Mohandas Vishindas Chugani<br>\"\n",
         "            \"For educational purposes</p>\"\n",
@@ -2657,16 +2676,16 @@
           "height": 611
         },
         "id": "BAiEw5HvpTd4",
-        "outputId": "166fcb09-8b4d-43eb-885d-b0c11e694ded"
+        "outputId": "56630149-2353-434a-db89-9ede4ba37ba2"
       },
-      "execution_count": 11,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "* Running on public URL: https://2ae04193b6f9c75856.gradio.live\n",
+            "* Running on public URL: https://abfce1fd3027d34c0f.gradio.live\n",
             "\n",
             "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -2678,7 +2697,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div><iframe src=\"https://2ae04193b6f9c75856.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"https://abfce1fd3027d34c0f.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
@@ -2689,7 +2708,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 26
         }
       ]
     }
